Fixing spacing issues in letters

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -232,6 +232,14 @@ p {
   margin-left: 10px;
 }
 
+.i-letter {
+  margin-left: 16px;
+}
+
+.q-letter {
+  margin-left: 12px;
+}
+
 .w-letter {
   margin-left: 10.5px;
 }
